[project]
name = "buttondown-cli"
version = "0.1.0"
description = "A command-line interface for Buttondown newsletter administration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
bd = "bd.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
